# nas-tools

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE.md  Makefile  README.md  alembic.ini  config.py  config_monitor.py  dbscript_gen.py  docker-compose.mysql.yml  docker-compose.yml  gunicorn.conf.py  initializer.py  log.py  pyproject.toml  restart-server.sh  run.py  start-dev.sh  start-prod.sh  stop-server.sh  version.py
.github/ISSUE_TEMPLATE/: bug-report.yml  docs.yml  feature-request.yml
.github/workflows/: build.yml  ci.yml
alembic/: env.py
alembic/versions/: 13a58bd5311f_1_2_2.py  1f5cc26cdd3d_1_2_3.py  1fd6712c2b1f_unify_media_type_to_lowercase.py  4a25eb3cc474_add_raw_key_to_api_keys.py  6766a9cd1d4b_1_3_2.py  69508d1aed24_1_2_1.py  6abeaa9ece15_1_2_0.py  702b7666a634_1_2_5.py  737c07183bff_1_2_8.py  7e029912f153_add_unique_constraint_to_search_result_.py  8b7846a02c03_1_3_3.py  9054013d8038_1_3_0.py  a3b4c5d6e7f8_3_8_0.py  a933386acbad_1_3_1.py  add_installed_col.py  ae61cfa6ada6_1_2_4.py  b2c3d4e5f6a7_3_8_1.py  b5817f5725fc_1_2_8.py  c1d2e3f4a5b6_add_state_to_download_history.py  cdf1444102e6_add_search_session_id_to_search_result_.py  d68a85a8f10d_1_2_6.py  e5f6a7b8c9d0_add_dst_backend_to_transfer_history.py  e9d9eaed8d5c_add_indexes_for_query_performance.py  ef7dde90afd7_update_search_result_unique_constraint_.py  f1a2b3c4d5e6_3_8_1.py  f2a3b4c5d6e7_3_8_1.py  f65506008fd7_rename_message_client_switchs_to_.py  f82cb58980d0_add_api_key_bearer_token_headers_to_.py  f8a9b0c1d2e3_rename_rss_tables_to_subscribe_tables.py
api/: deps.py  main.py
api/routers/: apikey.py  auth.py  brush.py  download.py  filter.py  image.py  media.py  message_webhook.py  plugin_framework.py  rbac.py  rss.py  scheduler.py  site.py  storage_backend.py  sync.py  system.py  userrss.py  words.py
app/: brushtask.py  brushtask_rule.py  filetransfer.py  rss.py  rsschecker.py  scheduler_service.py  searcher.py  subscribe.py  sync.py  system_service.py  torrentremover.py
app/agent/: __init__.py  config.py  service.py  tool_executor.py
app/core/: __init__.py  config.py  constants.py  module_config.py  settings.py  system_config.py
app/db/: __init__.py  database_factory.py  main_db.py  media_db.py  migrate.py  models.py  sql_adapter.py
app/di/: container.py
app/downloader/: client_factory.py  downloader.py  interfaces.py  pipeline.py  status.py  strategy.py
app/helper/: __init__.py  cloudflare_helper.py  cookiecloud_helper.py  db_helper.py  drissionpage_helper.py  ffmpeg_helper.py  image_proxy_core.py  image_proxy_helper.py  indexer_helper.py  ocr_helper.py  openai_helper.py  plugin_helper.py  progress_helper.py  redis_helper.py  rss_helper.py  site_data_updater.py  site_helper.py  submodule_helper.py  temp_cleanup_helper.py  words_helper.py
app/indexer/: indexer.py
app/media/: __init__.py  bangumi.py  category.py  douban.py  factory.py  fanart.py  media.py  models.py  scraper.py  service.py
app/mediaserver/: media_server.py
app/message/: client_registry.py  message.py  message_center.py  schema.py  switches.py
app/plugin_framework/: __init__.py  context.py  event_compat.py  hook_system.py  registry.py  sandbox.py
app/plugins/: plugin_manager.py
app/schemas/: __init__.py  auth.py  brush.py  download.py  indexer.py  media.py  plugin.py  rss.py  scheduler.py  search.py  site.py  sync.py  system.py  userrss.py  words.py
app/services/: __init__.py  apikey_service.py  auth_service.py  brush_core.py  brush_service.py  config_service.py  download_core.py  download_service.py  download_strategies.py  downloader_client_factory.py  downloader_core.py  file_index_service.py  filetransfer_service.py  filter_service.py  indexer_service.py  log_streaming_service.py  media_config_service.py  media_file_service.py  media_info_service.py  media_library_service.py  media_recommendation_service.py  media_service.py  plugin_framework_service.py  plugin_service.py  rbac_init.py  rbac_service.py  rss_core.py  rss_matcher.py  rss_service.py  scheduler_core.py  scheduler_jobs.py  scheduler_service.py  (+23 more)
config/: config.yaml  config.yaml.example  redis.conf
docker/: readme.md
docs/: agent_integration_design.md  api_redesign_full.md  architecture.md  cache_system.md  changelog.md  configuration.md  database_support.md  directory_sync.md  downloaders.md  frontend-Dockerfile.example  frontend-nginx.example.conf  frontend_framework_design.md  frontend_refactor_plan.md  indexers.md  message_templates.md  modernization_refactor_plan.md  plugin_development_guide.md  plugin_framework_v2_design.md  plugin_refactor_design.md  plugins.md  refactor_plan.md  site_refactor_design.md  storage_system_design.md  supported_sites.md  web_refactor_design.md
log/: __init__.py  _api.py  _buffer_proxy.py  _compat.py  _config.py  _intercept.py  _logger_manager.py
package/: trayicon.py
scripts/: drop_plugin_tables.py  env.py  fix_controllers.py  fix_dict_syntax.py  fix_frontend_get.py  fix_rbac.py  fix_success_response.py  generate_migration.py  split_apiv1.py
src/: initializer.py  version.py
tests/: config_test.yaml  conftest.py  test_anitopy.py  test_brushtask_rule.py  test_cache_system.py  test_chinese_brackets.py  test_database_factory.py  test_db_migrate.py  test_db_repositories.py  test_enclosure_truncate.py  test_episode_mapper.py  test_filter_search_results.py  test_html_searcher.py  test_http_utils_headers.py  test_image_proxy.py  test_image_proxy_fix.py  test_irregular_titles.py  test_json_utils_issue.py  test_llm_parser.py  test_log_buffer.py  test_log_module.py  test_lucide_integration.py  test_media_parser.py  test_media_search_fix.py  test_media_service_identify.py  test_mediainfo_from_id.py  test_message_templates.py  test_metainfo.py  test_models_split.py  test_performance.py  test_rbac.py  test_request_deduper.py  test_rezero_episode_mapping.py  test_scheduler_service.py  test_scheduler_webaction.py  test_search_performance.py  test_search_progress.py  test_slime_tokens.py  test_spider_enclosure.py  test_temp_manager.py  (+5 more)
web/: action.py  apiv1.py  main.py
(+1412 files in other folders)
