[project]
name = "nas-tools"
version = "3.7.0"
description = "Nas Tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.12.3",
    "bs4>=0.0.2",
    "cacheout>=0.16.0",
    "cachetools>=5.5.0",
    "cn2an>=0.5.23",
    "cryptography>=44.0.0",
    "dateparser>=1.2.0",
    "feapder>=1.9.1",
    "filelock>=3.16.1",
    "httpx[socks]>=0.28.1",
    "icalendar>=6.1.0",
    "jinja2>=3.1.5",
    "jsonpath>=0.82.2",
    "loguru>=0.7.3",
    "lxml>=5.3.0",
    "openai>=1.59.3",
    "parse>=1.20.2",
    "plexapi>=4.16.0",
    "psutil>=6.1.1",
    "pycryptodome>=3.21.0",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "psycopg2-binary>=2.9.10",
    "pypushdeer>=0.0.3",
    "pyquery>=2.0.1",
    "pyrsistent>=0.20.0",
    "python-dateutil>=2.9.0.post0",
    "python-hosts>=1.0.7",
    "qbittorrent-api>=2024.12.71",
    "redis-py-cluster>=2.1.3",
    "redis>=3.5.3",
    "requests[socks]>=2.32.3",
    "ruamel-yaml>=0.18.10",
    "slack-bolt>=1.22.0",
    "sqlalchemy>=2.0.36",
    "transmission-rpc>=7.0.11",
    "urllib3>=2.3.0",
    "watchdog>=6.0.0",
    "websockets>=14.1",
    "zhconv>=1.4.3",
    "setuptools>=75.7.0",
    "wheel>=0.45.1",
    "gunicorn>=23.0.0",
    "fast-bencode>=1.1.7",
    "pillow>=11.1.0",
    "iso639>=0.1.4",
    "func-timeout>=4.3.5",
    "humanize>=4.11.0",
    "srt>=3.5.3",
    "backcall>=0.2.0",
    "backports-shutil-get-terminal-size>=1.0.0",
    "pickleshare>=0.7.5",
    "pytz-deprecation-shim>=0.1.0.post0",
    "webdav4>=0.10.0",
    "serverchan-sdk>=1.0.6",
    "bencodepy>=0.9.5",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.45.0",
    "python-multipart>=0.0.26",
    "jose>=1.0.0",
    "itsdangerous>=2.2.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pydantic-ai>=1.90.0",
    "ollama>=0.6.2",
    "google-genai>=2.2.0",
    "boto3>=1.43.7",
    "smbprotocol>=1.16.1",
]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "pyright>=1.1.409",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

exclude = [
    "third_party",
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.uv.sources]
anitopy = { path = "third_party/anitopy", editable = true }

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "S"]
"api/routers/**" = ["B008"]
"app/infrastructure/external/doubanapi/**" = ["B008"]
"**/__init__.py" = ["F401"]
"**/_autosignin/52pt.py" = ["N999"]
"**/_pyaria2.py" = ["N802", "N803"]
