[build-system]
requires = ["setuptools>=75.7.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "nexus-media"
version = "4.1.0"
description = "Nexus Media"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "anitopy",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.15.0",
    "cn2an>=0.5.23",
    "cryptography>=49.0.0",
    "dateparser>=1.2.0",
    "filelock>=3.16.1",
    "httpx[socks,http2]>=0.28.1",
    "jinja2>=3.1.5",
    "jsonpath>=0.82.2",
    "loguru>=0.7.3",
    "lxml>=5.3.0",
    "openai>=2.41.0",
    "parse>=1.20.2",
    "plexapi>=4.16.0",
    "psutil>=6.1.1",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "psycopg2-binary>=2.9.10",
    "pypushdeer>=0.0.3",
    "pyquery>=2.0.1",
    "python-dateutil>=2.9.0.post0",
    "python-hosts>=1.0.7",
    "qbittorrent-api>=2026.6.0",
    "redis>=5.0",
    "ruamel-yaml>=0.18.10",
    "slack-bolt>=1.22.0",
    "sqlalchemy>=2.0.36",
    "transmission-rpc>=7.0.11",
    "urllib3>=2.3.0",
    "watchdog>=6.0.0",
    "websockets>=14.1",
    "setuptools>=75.7.0",
    "wheel>=0.45.1",
    "pillow>=11.1.0",
    "iso639>=0.1.4",
    "srt>=3.5.3",
    "webdav4>=0.10.0",
    "serverchan-sdk>=1.0.6",
    "bencodepy>=0.9.5",
    "fastapi>=0.136.0",
    "python-multipart>=0.0.32",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pydantic-ai>=1.107.0",
    "ollama>=0.6.2",
    "google-genai>=2.8.0",
    "boto3>=1.43.29",
    "smbprotocol>=1.16.1",
    "tenacity>=9.1.4",
    "granian>=2.7.6",
    "scalar-fastapi>=1.8.2",
    "opencc-python-reimplemented>=0.1.7",
    "defusedxml>=0.7.1",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.15.17",
    "fast-bencode>=1.1.7",
    "uvloop>=0.22.1",
    "orjson>=3.11.9",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "lxml-stubs>=0.5.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    "third_party",
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "S110",  # try-except-pass (do not silently swallow exceptions)
]
ignore = [
    "S101",  # assert
    "S311",  # pseudo-random generators
    "S404",  # subprocess
    "S603",  # subprocess-without-shell-equals-true
    "S607",  # start-process-with-partial-path
    "S608",  # hardcoded-sql-expression
]

[tool.ruff.lint.isort]
known-first-party = ["app", "log"]
known-third-party = []
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "S"]
"src/api/routers/**" = ["B008"]
"src/api/deps.py" = ["B008"]
"alembic/**" = ["S"]
"src/app/infrastructure/external/doubanapi/**" = ["B008"]
"src/app/infrastructure/external/tmdbv3api/**" = ["B008", "S"]
"src/app/media/doubanapi/**" = ["S"]
"src/app/media/tmdbv3api/**" = ["S"]
"third_party/**" = ["S"]
"**/__init__.py" = ["F401"]
"**/_autosignin/52pt.py" = ["N999"]
"**/_pyaria2.py" = ["N802", "N803"]

[tool.bandit]
exclude_dirs = ["tests", "third_party", ".venv", ".git", "scripts", "alembic"]
skips = ["B101", "B105", "B311", "B403", "B404"]
targets = ["src"]

[tool.safety]
ignore = []
